--- a/src/app/dashboard/home/lease-tabs/lease-tabs.component.html
+++ b/src/app/dashboard/home/lease-tabs/lease-tabs.component.html
@@ -5,13 +5,13 @@
       <!-- Nav pills -->
       <ul class="nav nav-pills">
           <li class="nav-item mb-2 col-12 col-sm-6 col-md-3">
-              <a class="nav-link" data-toggle="pill" href="#Equipment">Equipment</a>
+              <a class="nav-link active show" data-toggle="pill" href="#Equipment">Equipment</a>
           </li>
           <li class="nav-item mb-2 col-12 col-sm-6 col-md-3">
               <a class="nav-link" data-toggle="pill" href="#Payment">Payment</a>
           </li>
           <li class="nav-item mb-2 col-12 col-sm-6 col-md-3">
-              <a class="nav-link active show" data-toggle="pill" href="#Contract">Contract Status</a>
+              <a class="nav-link " data-toggle="pill" href="#Contract">Contract Status</a>
           </li>
           <li class="nav-item mb-2 col-12 col-sm-6 col-md-3">
               <a class="nav-link" data-toggle="pill" href="#Coverage">Equipment Coverage</a>
