--- a/src/app/auth/sign-up/signup-form/signup-form.component.html
+++ b/src/app/auth/sign-up/signup-form/signup-form.component.html
@@ -15,47 +15,58 @@
                 </li>
 
             </ul>
+
+
+
+
             <div class="tab-content" id="signin-tab-content">
+
+
+
                 <!--Sign in Tab Starts-->
                 <div class="tab-pane fade  " id="signin" role="tabpanel" aria-labelledby="signin-tab">
                     <p class="loginDesc">Please complete all fields below</p>
 
+                    <!-- signin Page  form -->
+                    <!-- use reactive form for signin-->
+
+
+
+
                     <!-- Start if signin form -->
-                    <form novalidate #f="ngForm">
+                    <form>
                         <div class="form-group emailWrap">
-                            <input type="" class="form-control"  placeholder="Email"    ngModel  name="email" required pattern="[^ @]*@[^ @]*" #email="ngModel" >
-                            <div class="alert alert-danger" *ngIf="email.errors && (email.dirty || email.touched)"> 
-                                    <p *ngIf="email.errors.required">Email Pattern Incorrect!</p>                                 
-                            <p *ngIf="email.errors.pattern">Email Pattern Incorrect!</p>
-                        </div>
+                            <input type="text" class="form-control"  placeholder="Enter Email" >
+                           
 
                         </div>
                         <div class="form-group passwordWrap">
-                            <input type="password" class="form-control" placeholder="Enter Password"   ngModel  name="password" required pattern="Demo2@123" #password="ngModel" minlength="8" maxlength="24" >
-                            <div class="alert alert-danger" *ngIf="password.errors && (password.dirty || password.touched)"> 
-                                    <p *ngIf="password.errors.minlength">Password max lenghth not match</p> 
-                                    <p *ngIf="password.errors.required">Password Pattern Incorrect</p>                              
-                                <p *ngIf="password.errors.pattern">Password Pattern Incorrect</p>
-
-                        </div>
+                            <input type="password" class="form-control" placeholder="Enter Password"   >
+                           
                         </div>
 
                         <br>
                         <br>
                         <br>
-                        <button type="submit" (click)="signIn()"  class="btnSubmit btn btn-primary btn-lg btn-block">
+                        <button type="submit"   class="btnSubmit btn btn-primary btn-lg btn-block">
                             Submit
                         </button>
                         <br>
                         <br>
-                        <p class="text-center footerTxt ">Forgot Password? <a
-                               (click)="resetPage()"
-                                class=""><b>Reset </b></a></p>
+                        
 
                     </form>
+                    <p class="text-center footerTxt ">Forgot Password? <a  class=""><b>Reset </b></a></p>
 
                     <!-- end of sign IN form-->
                 </div>
+
+                <!-- Start of signUP form -->
+
+
+
+
+
                 <!--Sign UP Tab Starts-->
 
                 <div class="tab-pane fade show active" id="signup" role="tabpanel"
@@ -65,54 +76,45 @@
                 <!-- start of sign UP form -->
 
  
-                    <form novalidate #f="ngForm" (ngSubmit)="submit(f.value)" >
-                        <div class="form-group">
-                            <input   type="text" class=" form-control" placeholder="Reference Key"  ngModel required name="referenceKey"  pattern="123456789" #referenceKey="ngModel"> 
-                            <div class="err-btm" *ngIf="referenceKey.errors && (referenceKey.dirty || referenceKey.touched)">
-                                    <p *ngIf="leaseNumber.errors.required">Incorrect Reference Number!</p>                                
-                                    <p *ngIf="referenceKey.errors.pattern">Incorrect Reference Number!</p>
-                            </div>
-                                  
+                    <form  #register="ngForm">
 
-                        </div>
+
                         <div class="form-group">
-                            <input type="text" class="form-control " placeholder="Lease Number"   ngModel required  name="leaseNumber"  pattern="052-5234567-098" #leaseNumber="ngModel">
-                            <div class="alert alert-danger" *ngIf="leaseNumber.errors && (leaseNumber.dirty || leaseNumber.touched)"> 
-                                    <p *ngIf="leaseNumber.errors.required">Incorrect Lease Number!</p>                               
-                                <p *ngIf="leaseNumber.errors.pattern">Incorrect Lease Number!</p>
-                        </div>
-                        </div>
-                        <!-- this is test comment -->
-                        <div class="form-group">
-                            <input type="text" class="form-control " placeholder="Merchant DBA" ngModel required name="merchantDBA"  pattern="ABC BBQ and Burgers" #merchantDBA="ngModel">
-                            <div class="alert alert-danger" *ngIf="merchantDBA.errors && (merchantDBA.dirty || merchantDBA.touched)">
-                                    <p *ngIf="leaseNumber.errors.required">Incorrect Merchant DBA!</p>
-                                 <p *ngIf="merchantDBA.errors.pattern">Incorrect Merchant DBA!</p>
-                        </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="card">
-                                <div class="card-body p-0 bg-light">
-                                    <img class="img-fluid " src="./assets/img/captcha.png"></div>
-                            </div>
+                            <input   type="text" class=" form-control" placeholder="Reference Key" name="referenceKey" ngModel required > 
                         </div>
 
 
-                        <button type="button"
-                                (click)="submit()" 
-                                class="btnSubmit btn btn-primary btn-lg btn-block" >Submit
+                        <div class="form-group">
+                            <input type="text" class="form-control " placeholder="Lease Number" name="leaseNumber" ngModel  required >                           
+                        </div>
+                       
+                        <div class="form-group">
+                            <input type="text" class="form-control " placeholder="Merchant DBA"  name="merchantDBA" ngModel required>                            
+                        </div>
+
+
+                        <div class="form-group">
+                                <re-captcha
+                                [(ngModel)]="captchaValue"
+                                name="captcha"
+                                required
+                              ></re-captcha>
+                        </div>
+
+
+                        <button type="button" 
+                                class="btnSubmit btn btn-primary btn-lg btn-block" (click)="submit()" [disabled]="!register.valid" >Submit
                         </button>
                         <br>
                         <br>
-                        <p class="text-center footerTxt ">Already have an account? <a  class=""><b>Sign
-                            In</b></a></p>
+                        
+                       
                            
 
-                    </form>
-
-        
-
+                    </form>  
                     
+                    <p class="text-center footerTxt ">Already have an account? <a   class=""><b>Sign In</b></a></p>
+
 
                     <!-- end of signUp form -->
 
@@ -122,7 +124,9 @@
                
 
         </div>
+       
     </div>
+    
 </div>
 
 
