Menu Bar not highlighting #1

--- a/src/app/dashboard/left-side-bar/left-side-bar.component.html
+++ b/src/app/dashboard/left-side-bar/left-side-bar.component.html
@@ -16,7 +16,7 @@
 
   </div>
   <ul class="lft-icon-wrap p-0">
-      <li class="active" [routerLink]="['home']">
+      <li [routerLinkActive]="['active']" [routerLink]="['home']">
           <div class="icnWrap ">
               <img class="icn" src="assets/img/ls-home.svg">
               <br>
@@ -26,7 +26,7 @@
 
 
       </li>
-      <li class="" [routerLink]="['epp']">
+      <li [routerLinkActive]="['active']" [routerLink]="['epp']">
           <div class="icnWrap">
               <img class="icn" src="assets/img/ls-epp.svg">
               <br>
@@ -40,7 +40,7 @@
 
 
       </li>
-      <li class="" [routerLink]="['claims']">
+      <li [routerLinkActive]="['active']" [routerLink]="['claims']">
           <div class="icnWrap">
               <img class="icn" src="assets/img/ls-claims.svg">
               <br>
@@ -50,7 +50,7 @@
 
 
       </li>
-      <li class="" [routerLink]="['eol']">
+      <li [routerLinkActive]="['active']" [routerLink]="['eol']">
           <div class="icnWrap">
               <img class="icn" src="assets/img/ls-eol.svg">
               <br>
@@ -60,7 +60,7 @@
 
 
       </li>
-      <li class="" [routerLink]="['faq']">
+      <li [routerLinkActive]="['active']" [routerLink]="['faq']">
           <div class="icnWrap ">
               <img class="icn" src="assets/img/ls-faq.svg">
               <br>
@@ -70,7 +70,7 @@
 
 
       </li>
-      <li class="" [routerLink]="['contact']">
+      <li [routerLinkActive]="['active']" [routerLink]="['contact']">
           <div class="icnWrap">
               <img class="icn" src="assets/img/ls-phone.svg">
               <br>
