Redirect to home page on clicking of done button on claims page #3

--- a/src/app/dashboard/claims/claims.component.html
+++ b/src/app/dashboard/claims/claims.component.html
@@ -55,7 +55,7 @@
 
 
               <div class=" text-center py-5">
-                  <button type="button" onclick="window.open('dashBoard.html','_self');" class="btn btn-outline-secondary flo">Done
+                  <button type="button" [routerLink]="['/dashboard/home']" class="btn btn-outline-secondary flo">Done
                   </button>
               </div>
           </div>
