Home Page > Equipment Coverage Tab > Click here should navigate to Claims page #5

--- a/src/app/dashboard/home/lease-tabs/lease-tabs.component.html
+++ b/src/app/dashboard/home/lease-tabs/lease-tabs.component.html
@@ -430,7 +430,7 @@
                           </li>
                       </ul>
                       <h6> On information regarding how to raise a claim
-                          <a href="claims.html">Click
+                          <a [routerLink]="['/dashboard/claims']" >Click
                               Here
                           </a>
                       </h6>
