--- a/src/app/forgot-password/reset/reset.component.html
+++ b/src/app/forgot-password/reset/reset.component.html
@@ -1,4 +1,4 @@
-<div id="signWrap" class=" h-100 container-fluid">
+<div id="signWrap" class="container-fluid">
   <div class="row">
     <div class="col-sm-12">
       <h1 id="brandLogo" class="text-center">
@@ -6,29 +6,31 @@
       </h1>
       <div class="formWrap ">
         <div class="formWrapInner">
-          <br>
 
           <h1 class="headingWrap">Reset Your Password</h1>
           <div class="tab-content" id="signin-tab-content">
 
             <div class="tab-pane fade show active" id="signup" role="tabpanel" aria-labelledby="signup-tab">
-              <p class="loginDesc">Enter your email and we’ll send a link to reset your password to the address we have on file.
+              <p class="loginDesc">Enter your email and we’ll send a link to reset your password to the address we have
+                on file.
               </p>
 
-              <br>
-              <form>
+              <form #resetPass="ngForm" (submit)="forgotPass(resetPass)">
                 <div class="form-group emailWrap">
-                  <input type="" class="form-control" aria-describedby="emailHelp" placeholder="Email" value="Email">
+                  <input
+                    type=""
+                    class="form-control"
+                    aria-describedby="emailHelp"
+                    placeholder="Email"
+                    name="email"
+                    ngModel
+
+                  >
 
                 </div>
 
-                <br>
-                <br>
 
-
-                <button type="button" (click)="thankyou()" class="btnSubmit btn btn-primary btn-lg btn-block">Submit</button>
-                <br>
-                <br>
+                <button type="submit" class="btnSubmit btn btn-primary btn-lg btn-block">Submit</button>
 
 
               </form>
