--- a/src/app/auth-temp/temp-signin/temp-signin.component.html
+++ b/src/app/auth-temp/temp-signin/temp-signin.component.html
@@ -1,42 +1,41 @@
 <div id="signWrap" class="container-fluid">
   <div class="row">
     <div class="col-sm-12">
-      <h1 id="brandLogo" class="text-center"><a href="index.html"><img src="./assets/img/firstdata_logo.svg"></a></h1>
+      <h1 id="brandLogo" class="text-center"><a><img src="./assets/img/firstdata_logo.svg"></a></h1>
       <div class="formWrap ">
         <div class="formWrapInner">
 
-          <h1 class="headingWrap">Sign In</h1>
+
+          <h1 class="headingWrap">Sign in</h1>
           <div class="tab-content" id="signin-tab-content">
 
             <div class="tab-pane fade show active" id="signup" role="tabpanel"
                  aria-labelledby="signup-tab">
-              <p class="loginDesc">Please complete all fields below</p>
+              <p class="loginDesc">Please fill all fields below</p>
 
+              <!-- Sign In form -->
+              <form #tempSignIn="ngForm" (submit)="tempSignInUser(tempSignIn)">
 
-              <!-- sign in page -->
-
-
-              <form #regSignIn="ngForm" (submit)="regularSignIn(regSignIn)">
-                <div class="form-group emailWrap ">
+                <div class="form-group emailWrap">
                   <input
-                    type="email"
+                    type="text"
                     class="form-control"
                     placeholder="Email"
                     name="email"
                     ngModel
-
                   >
 
                 </div>
-                <div class="form-group passwordWrap ">
+
+                <div class="form-group passwordWrap">
                   <input
                     type="password"
                     class="form-control"
-                    placeholder="Password"
-                    name="password"
+                    placeholder="Temp Password"
+                    name="tempPass"
                     ngModel
-
                   >
+
                 </div>
 
 
@@ -46,9 +45,9 @@
                 </button>
 
 
-              </form>
 
-              <!-- end of sign In form -->
+              </form>
+              <!-- end of form -->
 
             </div>
           </div>
@@ -60,3 +59,7 @@
 
   </div>
 </div>
+
+
+
+
