--- a/src/app/auth/sign-up/signup-main/signup-main.component.html
+++ b/src/app/auth/sign-up/signup-main/signup-main.component.html
@@ -1,11 +1,11 @@
-<div id="signWrap" class=" h-100 container-fluid">
+<div id="signWrap" class="container-fluid">
   <div class="row">
-      <div class="col-sm-12 col-md-12 col-lg-5  offset-lg-1 ">
-    <app-signup-form></app-signup-form>
+    <div class="col-sm-12 col-md-12 col-lg-5  offset-lg-1  ">
+      <app-signup-form></app-signup-form>
     </div>
-    <div class="col-sm-12 col-lg-6  ">
-        <app-signup-stat></app-signup-stat>
+    <div class="col-sm-12  col-md-12 col-lg-5    ">
+      <app-signup-stat></app-signup-stat>
     </div>
-    
+
   </div>
-  </div>
+</div>
