--- a/src/app/landing-page/land-cnt-02/land-cnt-02.component.html
+++ b/src/app/landing-page/land-cnt-02/land-cnt-02.component.html
@@ -15,7 +15,7 @@
             </p>
 
         </div>
-        <div class="col-12 col-md-6 bg-danger  ">
+        <div class="col-12 col-md-6">
             <div class="row">
                 <div class="clearfix">
                     <img class="img-fluid" src="./assets/img/landCntTwo.png">
