--- a/src/app/landing-page/land-head/land-head.component.html
+++ b/src/app/landing-page/land-head/land-head.component.html
@@ -9,7 +9,9 @@
                             class="btn btn-lg fd-but-sign">
                         Sign in
                     </button>
-                    <button type="button" (click)="signUp()"
+                  <span class="butSpacer "></span>
+
+                  <button type="button" (click)="signUp()"
                             class="btn btn-lg fd-but-sign">Sign Up
                     </button>
 
